@@ -1,3 +1,6 @@
+Feb 03, 2022
+  strains: simplified code for handling strains
+
 Jan 19, 2022
   agr: switched to assembly rn7 for rat
   updated log4j to avoid zero day exploit
